--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Assignment 4</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .card {
+                width: 18rem;
+            }
+        
+    </style>
 </head>
+
 <body>
     <h1 class="text-center py-4">Meal Generator</h1>
     <p class="text-center">Money in my wallet:$<span id="wallet">100</span></p>
